; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_ak5558.c_ak5558_power_off.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_ak5558.c_ak5558_power_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ak5558_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ak5558_priv*)* @ak5558_power_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ak5558_power_off(%struct.ak5558_priv* %0) #0 {
  %2 = alloca %struct.ak5558_priv*, align 8
  store %struct.ak5558_priv* %0, %struct.ak5558_priv** %2, align 8
  %3 = load %struct.ak5558_priv*, %struct.ak5558_priv** %2, align 8
  %4 = getelementptr inbounds %struct.ak5558_priv, %struct.ak5558_priv* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.ak5558_priv*, %struct.ak5558_priv** %2, align 8
  %10 = getelementptr inbounds %struct.ak5558_priv, %struct.ak5558_priv* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @gpiod_set_value_cansleep(i32 %11, i32 0)
  %13 = call i32 @usleep_range(i32 1000, i32 2000)
  br label %14

14:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @gpiod_set_value_cansleep(i32, i32) #1

declare dso_local i32 @usleep_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
